# DIYQuant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/gen-test/: SKILL.md
config/: settings.yaml
deploy/: backup.sh  iam-policy.json  publish.sh  setup.sh
docs/: deploy.md  first-large-universe-cycle.md  first-run-checklist.md  roadmap-vision.md
scripts/: backfill.py  check_alerts.py  refresh_universe.py  report.py  run_backtest.py  run_live.py  score_news.py
src/diyquant/: config.py
src/diyquant/alerts/: discord.py
src/diyquant/backtest/: engine.py
src/diyquant/data/: models.py  store.py
src/diyquant/data/providers/: alpaca_news.py  base.py  yfinance_news.py  yfinance_provider.py
src/diyquant/execution/: alpaca_broker.py  base.py  ledger.py  pipeline.py  sim_broker.py
src/diyquant/risk/: limits.py  sizing.py
src/diyquant/signals/: base.py
src/diyquant/signals/sentiment/: filter.py  finbert.py
src/diyquant/signals/technical/: sma_crossover.py
tests/: test_alerts_discord.py  test_backtest_engine.py  test_execution_ledger.py  test_execution_pipeline.py  test_risk_limits.py  test_risk_sizing.py  test_sentiment_filter.py  test_sim_broker.py  test_sma_crossover.py  test_yfinance_news.py
