[project]
name = "diyquant"
version = "0.1.0"
description = "Retail-scale quantitative trading pipeline: data -> signal -> risk -> execution"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.50",
    "pyarrow>=16.0",
    "pydantic-settings>=2.4",
    "PyYAML>=6.0",
    "alpaca-py>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diyquant"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
